<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.MakeComplaint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-87dp">

        <ImageButton
            android:id="@+id/backButtonComplaint"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            android:scaleType="fitXY"
            android:src="@drawable/backbutton" />
    </LinearLayout>

    <TextView
        android:id="@+id/make_complaint_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/make_complaint"
        android:textColor="@color/green_primary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/chef_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chefs_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/meal_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.252" />

    <EditText
        android:id="@+id/complaint_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/description_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/meal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_complaint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/send_complaint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_complaint_title"
        app:layout_constraintVertical_bias="0.853" />

</androidx.constraintlayout.widget.ConstraintLayout>