<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical" >

<TextView
    android:id="@+id/userNameText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/nunito_sans"
    android:gravity="center_vertical"
    android:minHeight="50dp"
    android:text="@string/chef_name_label"
    android:textSize="16sp"
    android:textStyle="bold" />

<LinearLayout
    android:id="@+id/orderInfoLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/mealNameText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:text="@string/meal_name_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/infoDivider2"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/quantityText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="50dp"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/infoDivider"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/dateText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="50dp"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/fileComplaintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fileComplaint_button"
            app:backgroundTint="@android:color/holo_red_dark" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ratingBar"
            android:isIndicator="false"
            android:numStars="5"
            android:scaleX=".75"
            android:scaleY=".75"
            android:stepSize="0.5" />


    </LinearLayout>

</LinearLayout>